2004-04-08  John ffitch  <jpff@codemist.co.uk>

	* InOut/widgets.cpp (fl_knob): Added retuirn to initerror call
	(fl_button): 

2004-04-06  John ffitch  <jpff@codemist.co.uk>

	* InOut/FL_graph.cpp (draw): Initialise win_h

2004-04-05  John ffitch  <jpff@codemist.co.uk>

	* H/csound.h: rtplay__ needs to have void* argument

	* OOps/midirecv.c (csoundDefaultMidiOpen): Needs void* argument

	* Top/csound.c: mainRESET needs an argument

	* Engine/linevent.c (newevent): needs csound argument

2004-03-14  John ffitch  <jpff@codemist.co.uk>

	* OOps/fout.c (infile_act): renamed from infile to avoid name
	clash with linsndfile support

2004-03-11  John ffitch  <jpff@codemist.co.uk>

	* InOut/libsnd.c (sfopenout): Added test.au as a default name

2004-03-03  John ffitch  <jpff@codemist.co.uk>

	* Engine/scxtract.c (scxtract): Added call to sread_init() as suggested
	by Anthony Kozar

2004-02-29	Steven Yi	<stevenyi@csounds.com>

	* InOut/rtpa.c: modifed code to use PortAudio device 1 by default if 
	none given.  Messages are now given to user if defaulting to device 1 
	or what device user has selected.
	
	* Top/main.c: changed strcmp to strncmp when looking for dac or 
	devaudio to allow use of --sched when using on linux and selecting
	PortAudio devices (i.e. dac1, devaudio3)


2004-02-28	Steven Yi	<stevenyi@csounds.com>

	* Engine/entry2.c: Added reverbx_set and reverbx back in as well as 
	opcode entries for nreverb/reverb2


2004-02-28  John D. Ramsdell  <ramsdell@mitre.org>

	* Makefile.am: Removed _SOURCES vars from conditionals and made
	plugins libs begin with "lib" so that this automake file works
	with older version of automake.

	* configure.ac: Removed AC_PROG_RANLIB and added $srcdir to
	include so that VPATH works.

2004-02-25  Michael Gogins <gogins@pipeline.com>

	Modified sources to #ifdef for HAVE_LIBSNDFILE as defined by configure.ac,
	not _SNDFILE_.

	Removed jpff_glue.c as its function is now performed by csound.c.
	