@@ -1,3 +1,9 @@
+2004-04-27  John ffitch  <jpff@codemist.co.uk>
+
+	* Engine/oload.c: Initialise file_opened_
+
+	* H/csoundCore.h (ENVIRON_): Added file_opened_ to environment
+
 2004-04-08  John ffitch  <jpff@codemist.co.uk>
 
 	* InOut/widgets.cpp (fl_knob): Added retuirn to initerror call
